[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Mobs/chandelier.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mobs/chandelier/chandelier_atk.png" type="Texture" id=2]
[ext_resource path="res://Assets/Mobs/chandelier/chandelier_idle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Mobs/chandelier/chandelier_death.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/sword_swing2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/enemy_die.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/player/Sword/MyHurtBox.gd" type="Script" id=9]
[ext_resource path="res://Scenes/player/Sword/MyHitBox.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.760784, 0.192157, 0.192157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.0705882, 0.027451, 0.027451, 0 )
border_blend = true
anti_aliasing_size = 0.235

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 19 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 42.25, 33.5 )

[sub_resource type="Animation" id=41]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Position2D/Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "attack1"
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=43]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=44]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MyHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=45]
resource_name = "idle"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 125.25, 99.5 )

[node name="chandelier" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
scale = Vector2( -1, 1 )

[node name="Sprite" type="Sprite" parent="Position2D"]
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
hframes = 9

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -56.0
margin_right = 26.0
margin_bottom = -46.0
custom_styles/fg = SubResource( 39 )
max_value = 200.0
value = 200.0
percent_visible = false

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="MyHurtBox" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="hitbox" type="CollisionShape2D" parent="MyHurtBox"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="MyHitBox" type="Area2D" parent="."]
visible = false
position = Vector2( -10, 1 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyHitBox"]
position = Vector2( 76, -5 )
shape = SubResource( 40 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 41 )
anims/attack1 = SubResource( 42 )
anims/death = SubResource( 43 )
anims/hit = SubResource( 44 )
anims/idle = SubResource( 45 )

[node name="detector" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="detector"]
position = Vector2( 0, -7 )
shape = SubResource( 46 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 1000.0
attenuation = 2.21914
bus = "SFX"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 1000.0
attenuation = 2.21914
bus = "SFX"

[connection signal="body_entered" from="MyHitBox" to="." method="_on_MyHitBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
